# TheBlockheadsTools

./: .gitignore  Cargo.toml  README.md  bh_chunk.py  block.py  blockType.py  blockhead.py  bplist.py  chunk.py  exportable.py  gameSave.py  gzipWrapper.py  inventory.py  item.py  itemType.py  out  pyproject.toml  test.py  test_pytest.py
.pytest_cache/v/cache/: nodeids
crates/chunk_gen/: Cargo.toml  README.md
crates/chunk_gen/src/: main.rs
crates/experiments/: Cargo.toml
crates/experiments/src/: main.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  egui_tools.rs  fps_counter.rs  input.rs  main.rs  renderer.rs  shader.wgsl
crates/gui/src/gpu/: all_chunk.rs  camera.rs  chunk.rs  mod.rs  selected_block.rs  texture.rs  vertex.rs  voxel.rs
crates/lib/: Cargo.toml
crates/lib/src/: block.rs  block_type.rs  (+4 more)
py/: Dockerfile  README.md  bh_chunk.py  block.py  blockType.py  bplist.py  exportable.py  gameSave.py  gzipWrapper.py  inventory.py  main.py  pyproject.toml
src/: block.rs  block_type.rs  main.rs
test_data/blocks/: 25_19_compressedBlock  blocks_10_8  blocks_13_8  blocks_13_9  blocks_30_4  blocks_30_8  blocks_31_8  blocks_32_5  blocks_32_6  blocks_33_4  blocks_33_5  blocks_35_1  blocks_35_2  blocks_35_3  blocks_35_4  blocks_36_1  blocks_36_2  blocks_36_3  blocks_36_4  blocks_38_3  blocks_46_14  blocks_46_15  blocks_89_3  blocks_9_8
test_data/bplists/: main_worldv2  worldv2
test_data/inventories/: 13_dirt_and_6_empty  1_dirt_and_6_empty  1_dirt_at_basket_1_pos_1_and_6_empty_basket  2_dirt_and_6_empty  3_dirt_and_6_empty  7_empty  7_empty_basket
(+23 files in other folders)
