[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["med1844"]
license = "MIT"

[workspace.dependencies]
plist = "1.7.2"
flate2 = "1.1.2"

the-blockheads-tools-lib = { path = "crates/lib" }
the-blockheads-tools-gui = { path = "crates/gui" }

